$Id$

2009-07-xx

	* 1.17.3 released
	
	* dbResult class

2009-06-29
	* 1.17.2 released
	
	* cosmetics
	
	* change file permissions in FileBasedCache

2009-06-15
	* 1.17.1 released
	
	* move ViewFactory to CMS
	
	* move CacheWorker to CMS
	
	* add addKey method to CacheTicket

2009-05-04
	* 1.17 released
	
	* cache work changed

2009-04-22
	* 1.16 released
	
	* move CMS classes from framework
	
	* remove ExceptionsMapper: work with exceptions straight
	
2009-03-15
	* 1.15 released
	
	* add MemcachedBasedCache
	
	* move to BSD license
	
	* change Controller to Module naming

2009-03-10
	* 1.14 released
	
	* add CacheWorker

2009-02-25
	* 1.13 released
	
	* add HttpRequest
	
	* cache layer

2008-12-13
	* 1.12.1 released
	
	* add SiteController

2008-12-12
	* 1.12 released
	
	* change work with chain controller
	
	* broke bc in chain controller
	
	* change exceptions work - move all to ExceptionMapper

2008-11-27
	* 1.11 released
	
	* interface naming

2008-11-26
	* 1.1 released
	
	* fix work with exceptions

2008-11-19
	* 1.05.1 released
	
	* fix databaseException lastQuery
	
	* some cosmetics

2008-11.18
	* 1.05 released
	
	* ControllerDispatcher: add default settings for controller

2008-11-01
	* 1.04 released
	
	* model refactoring
	
	* fix some phpDoc
	
	* some exceptions refactoring
	
	* more cosmetics

2008-10-28
	* 1.03.1 released
	
	* add page status to database

2008-10-20
	* 1.03 released
	
	* create DA layer
	
	* database pools

2008-10-16
	* 1.02 released
	
	* With bug with preg pages

2008-10-15
	* 1.01 released
	
	* Missing argument exception in create ticket (ticketAlias)
	
	* NoFoundException in create view (layout_file_id not found)
	
	* DatabaseException query executor change (toString)
	
	* Autoloader classes change for interfaces

2008-10-14
	* 1.0 released